k8s-yaml/dev-ns/ingress-service-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: frontend-web-cip-service
              servicePort: 80
          - path: /api/?(.*)
            backend:
              serviceName: gateway-cip-service
              servicePort: 3000
